--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
     <label>지하여부(0=지상): <input type="text" name="udrtYn" value="0"></label>
     <label>건물본번: <input type="text" name="buldMnnm" value="111"></label>
     <label>건물부번: <input type="text" name="buldSlno" value="0"></label>
+    <label><input type="radio" name="resultType" value="json" checked> JSON</label>
+    <label><input type="radio" name="resultType" value="xml"> XML</label>
+
     <button type="button" onclick="getDetailAddress()">상세주소 조회</button>
   </form>
 
