--- a/index.html
+++ b/index.html
@@ -2,17 +2,18 @@
 <html lang="ko">
 <head>
   <meta charset="UTF-8">
-  <title>상세주소 검색</title>
+  <title>상세주소 검색 API</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <style>
     body { font-family: sans-serif; margin: 20px; }
     label { display: block; margin-top: 10px; }
-    input[type="text"] { width: 200px; }
+    input[type="text"] { width: 250px; }
     button { margin-top: 15px; padding: 5px 10px; }
     .result-box { margin-top: 20px; }
     .result-box ul { padding-left: 20px; }
     .result-box li { margin: 4px 0; }
     .gray { color: gray; }
+    .error { color: red; font-weight: bold; }
   </style>
 </head>
 <body>
@@ -24,9 +25,10 @@
     <label>지하여부(0=지상): <input type="text" name="udrtYn" value="0"></label>
     <label>건물본번: <input type="text" name="buldMnnm" value="111"></label>
     <label>건물부번: <input type="text" name="buldSlno" value="0"></label>
-    <label><input type="radio" name="resultType" value="json" checked> JSON</label>
-    <label><input type="radio" name="resultType" value="xml"> XML</label>
-
+    <label>
+      <input type="radio" name="resultType" value="json" checked> JSON
+      <input type="radio" name="resultType" value="xml"> XML
+    </label>
     <button type="button" onclick="getDetailAddress()">상세주소 조회</button>
   </form>
 
@@ -35,13 +37,20 @@
   <script>
     function getDetailAddress() {
       const params = new URLSearchParams($("#addrForm").serialize());
+      const resultType = $("input[name='resultType']:checked").val();
+
       fetch(`/.netlify/functions/addrDetail?` + params)
         .then(response => {
-          if (!response.ok) throw new Error("HTTP " + response.status);
-          return response.json();
+          if (!response.ok) throw new Error("HTTP 오류: " + response.status);
+          return resultType === 'xml' ? response.text() : response.json();
         })
         .then(data => {
-          console.log("📦 API 응답:", data);
+          if (resultType === 'xml') {
+            $("#result").html(`<pre style="color:gray;">📄 XML 응답:
+${data}</pre>`);
+            return;
+          }
+
           if (!data.results || !data.results.common) {
             throw new Error("API 응답 형식 오류");
           }
@@ -49,6 +58,7 @@
             $("#result").html(`<p class="gray">❌ 오류: ${data.results.common.errorMessage}</p>`);
             return;
           }
+
           const jusoList = data.results.juso;
           if (!jusoList || jusoList.length === 0) {
             $("#result").html('<p class="gray">📭 해당 주소에 상세주소가 없습니다.</p>');
@@ -56,13 +66,13 @@
           }
 
           const listItems = jusoList.map(j =>
-            `<li>${j.dongNm} ${j.floorNm}층 ${j.hoNm}</li>`
+            `<li>${j.dongNm || ''}동 ${j.floorNm || ''}층 ${j.hoNm || ''}</li>`
           ).join('');
           $("#result").html(`<h3>📋 검색결과 (${jusoList.length}건)</h3><ul>${listItems}</ul>`);
         })
         .catch(error => {
-          console.error("❌ 오류:", error);
-          $("#result").html(`<p class="gray">❗ 에러 발생: ${error.message}</p>`);
+          console.error("❌ 오류 발생:", error);
+          $("#result").html(`<p class="error">❗ 에러 발생: ${error.message}</p>`);
         });
     }
   </script>
